#9145 fix websocket modules
Signed-off-by: Ludovic Orban <lorban@bitronix.be>